# echoml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.ini  README.md  pyproject.toml  requirements.txt  setup.py
echoml/: app.py  echoml.py  parser.py
examples/: app.py  echoml.py  sv_km.py  test.json  test.py
examples/html/: sv_km.html
examples/metadata/: default_metadata.yaml  example_metadata.yaml
src/: BT-acoustic-data.py  Convert_EK60-to-netCDF.py  EK60-netCDF_view-echograms.py  Pipfile  core.py  echoml.py  echopype_test.py  sperm_whale.json  sv_km.py
src/utils/: aqstxUtilities.py
tests/: test_echoml.py
