[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoml"
version = "0.1.0"
description = "A machine learning utility for analyzing echograms using K-Means cluster maps built on echopype"
authors = [
    { name = "Michael C Ryan", email = "spacetime.engineer@gmail.com" }
]
license = "BSD-3-Clause"  # SPDX license identifier
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "xarray",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "echopype>=0.6.0",
    "echoregions",
    "loguru"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop"
]